--- a/style.css
+++ b/style.css
@@ -17,8 +17,10 @@ body {
 }
 .dog {
     height: 200px;
-    justify-content: center;
+    display: block;
+    margin:0 auto
 }
 .pac {
-    justify-content: center;
+    display: block;
+    margin: 0 auto;
 }
